# token-core-monorepo

.cargo/: config
imkey-core/mobile-sdk/imKeyCoreX/imKeyCoreX/: connector.h
script/: build-android.sh  build-ios-sim.sh  build-ios.sh
token-core/tcx/: Cargo.toml
token-core/tcx-keystore/src/: lib.rs  signer.rs
token-core/tcx-keystore/src/keystore/: hd.rs  mod.rs  private.rs
token-core/tcx-migration/src/: migration.rs
token-core/tcx-sui/: Cargo.toml
token-core/tcx-sui/src/: address.rs  lib.rs  primitives.rs  signer.rs  transaction.rs
token-core/tcx/src/: handler.rs  lib.rs
