[package]
name = "tcx-sui"
version = "0.1.0"
edition = "2021"

[dependencies]
tcx-keystore = { path = "../tcx-keystore" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-common = { path = "../tcx-common" }
anyhow = { version = "=1.0.79", features = [] }
bs58 = "=0.2.5"
sp-core = "=7.0.0"
blake2b-rs = "=0.2.0"
prost = "=0.11.2"
bcs = "0.1.3"
base64 = "=0.13.1"
hex = "=0.4.3"
move-core-types = "0.0.2"
thiserror = "=1.0.56"
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.89"
schemars = "0.8.10"
serde_with = "2.1.0"
serde_repr = "=0.1.17"
sha2 = "=0.10.6"
eyre = "0.6.8"
